--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/esper/esper-4.9.0/esper-4.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/esper/esper-4.9.0/esperio-csv-4.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/esper/esper-4.9.0/esper/lib/antlr-runtime-3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/esper/esper-4.9.0/esper/lib/cglib-nodep-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/esper/esper-4.9.0/esper/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/esper/esper-4.9.0/esper/lib/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tucker/Desktop/eclipse/twitter4j-4.0.1/lib/twitter4j-core-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/antlr-runtime-3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/esper-4.9.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/esperio-csv-4.9.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tucker/workspace/CS542/twitter4j-core-4.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
